# xgap

./: .gitignore  CHANGES  CHAP001.htm  CHAP003.htm  CHAP004.htm  CHAP008.htm  CHAP009.htm  Changelog.r17  Changelog.r20  Changelog.r22  Changelog.r23  HOWTO.wrapup  LICENSE  Makefile.in  PackageInfo.g  README  README.Windows  TODO  autogen.sh  buildman.pe  chapters.htm  configure  configure.ac  configure.in  index.md  indxD.htm  indxE.htm  indxF.htm  indxI.htm  indxL.htm  indxM.htm  indxP.htm  indxQ.htm  indxS.htm  indxV.htm  init.g  theindex.htm  update.g  xgap.sh.in  xgap.shi
.github/workflows/: CI.yml  release.yml
_data/: package.yml
cnf/: Makefile  Makegap.in  Makegap.top  config.hin  configure.ac  configure.in  configure.out
doc/: Makefile  README.menu3to4  buildman.config  buildman.pe  buildman.pe2  diffgap3.tex  gobject.msk  gobject.tex  graphs.tex  install.tex  make_doc  manual.bib  manual.tex  menus.tex  posetops.msk  posets.tex  savetime.tex  sglatsys.tex  sgrplats.tex  sheets.tex  usercomm.msk  whatis.tex
etc/: tarit  zooit
examples/: cavicchi.g  cryst.g  dihedral.g  fpgroup.g  puzzle.g  sym6.g  trefoil.g
htm/: CHAP001.htm  CHAP002.htm  CHAP003.htm  CHAP004.htm  CHAP005.htm  CHAP006.htm  CHAP007.htm  CHAP008.htm  CHAP009.htm  CHAP010.htm  biblio.htm  chapters.htm  indxA.htm  indxB.htm  indxC.htm  indxD.htm  indxE.htm  indxF.htm  indxG.htm  indxH.htm  indxI.htm  indxL.htm  indxM.htm  indxN.htm  indxO.htm  indxP.htm  indxQ.htm  indxR.htm  indxS.htm  indxT.htm  indxU.htm  indxV.htm  indxW.htm  theindex.htm
lib/: color.g  color.gd  color.gi  font.gd  fpextra.g  glatgrp.g  glatlist.g  gobject.gd  gobject.gd~  gobject.gi  gobject.gi~  ilatfpgp.g  ilatgrp.g  ilatgrp.gd  ilatgrp.gi  ilatmamo.g  init.g  init.g.old  meataxe.gi  menu.g  menu.gd  menu.gi  permimag.g  poset.gd  poset.gi  read1.g  scratch  sheet.g  sheet.gd  sheet.gi  window.g  window.g.old  window.gi  xabattoi.g  xdispatc.g
src.x11/: gapgraph.c  gapgraph.h  gaptext.c  gaptext.h  popdial.c  popdial.h  pty.c  pty.h  selfile.c  selfile.h  utils.c  utils.h  xcmds.c  xcmds.h  xgap.c  xgap.h
src.x11/bitmaps/: checksym.bm  emptymk.bm  exmark.bm  menusym.bm  return.bm
tst/: testall.g  xgap_test.g
